clusters/etl4/overlays/guacamole/guacamole.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guacamole
  labels:
    app.kubernetes.io/name: guacamole
    app.kubernetes.io/component: guacamole
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: guacamole
      app.kubernetes.io/component: guacamole
  template:
    metadata:
      labels:
        app.kubernetes.io/name: guacamole
        app.kubernetes.io/component: guacamole
    spec:
      containers:
      - name: guacamole
        image: guacamole/guacamole
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: guacd
spec:
  selector:
    app.kubernetes.io/name: guacamole
    app.kubernetes.io/component: guacd
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
