clusters/etl4/overlays/guacamole/guacd.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guacd
  labels:
    app.kubernetes.io/name: guacamole
    app.kubernetes.io/component: guacd
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: guacamole
      app.kubernetes.io/component: guacd
  template:
    metadata:
      labels:
        app.kubernetes.io/name: guacamole
        app.kubernetes.io/component: guacd
    spec:
      containers:
      - name: guacd
        image: guacamole/guacd
        ports:
        - containerPort: 4822
---
apiVersion: v1
kind: Service
metadata:
  name: guacd
spec:
  selector:
    app.kubernetes.io/name: guacamole
    app.kubernetes.io/component: guacd
  ports:
    - protocol: TCP
      port: 9376
      targetPort: 9376
