clusters/etl4/overlays/guacamole/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: guacamole
spec:
  to:
    kind: Service
    name: guacamole-guacamole
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
